fix: remove negative margin-left on blok-header h1, align with container

--- a/src/Blok.css
+++ b/src/Blok.css
@@ -2,7 +2,7 @@
   width: 100%;
   max-width: 1440px;
   height: auto;
-  padding: 0 60px 40px 60px;
+  padding: 0 60px 40px 113px;
   display: flex;
   align-items: center;
   justify-content: flex-start;
@@ -16,9 +16,8 @@
   font-size: 48px;
   line-height: 100%;
   letter-spacing: 0%;
-  /* margin: 0; */
+  margin: 0;
   color: #1a1a1a;
-  margin-left: -641px;
 }
 
 .blok-container-1 {
